## Process this file with automake to produce Makefile.in
#
#  (c) Copyright 2005, Hewlett-Packard Development Company, LP
#
#  See the file named COPYING for license details
#

# avoid requiring all GNUisms
AUTOMAKE_OPTIONS = 1.7 foreign

SUBDIRS = include src

aclocaldir = $(datadir)/aclocal
aclocal_DATA = com_hp_hpl_dataseries.m4
