###############################################################################
#
# File:         Makefile.am
# RCS:          $Header: /mount/cello/cvs/DataSeries/include/Makefile.am,v 1.1 2005/02/15 01:18:33 anderse Exp $
# Description:  automake input file
# Author:       Eric Anderson
# Created:      Tue Jan  4 10:45:07 2005
# Modified:     Wed Jan  5 11:43:45 2005 (Eric Anderson) anderse@hpl.hp.com
# Language:     Makefile
# Package:      N/A
# Status:       Experimental (Do Not Distribute)
#
# (C) Copyright 2005, Hewlett-Packard Laboratories, all rights reserved.
#
###############################################################################

nobase_include_HEADERS = \
	DataSeries/DataSeriesFile.H \
	DataSeries/DStoTextModule.H \
	DataSeries/Extent.H \
	DataSeries/ExtentField.H \
	DataSeries/ExtentSeries.H \
	DataSeries/ExtentType.H \
	DataSeries/GeneralField.H \
	DataSeries/GroupByModule.H \
	DataSeries/IndexSourceModule.H \
	DataSeries/MinMaxIndexModule.H \
	DataSeries/DataSeriesModule.H \
	DataSeries/PrefetchBufferModule.H \
	DataSeries/RowAnalysisModule.H \
	DataSeries/SequenceModule.H \
	DataSeries/TypeIndexModule.H \
	DataSeries/commonargs.H
