#
#  (c) Copyright 2005, Hewlett-Packard Development Company, LP
#
#  See the file named COPYING for license details
#
# automake input file

nobase_include_HEADERS = \
	DataSeries/DataSeriesFile.H \
	DataSeries/DStoTextModule.H \
	DataSeries/Extent.H \
	DataSeries/ExtentField.H \
	DataSeries/ExtentSeries.H \
	DataSeries/ExtentType.H \
	DataSeries/GeneralField.H \
	DataSeries/GroupByModule.H \
	DataSeries/IndexSourceModule.H \
	DataSeries/MinMaxIndexModule.H \
	DataSeries/DataSeriesModule.H \
	DataSeries/PrefetchBufferModule.H \
	DataSeries/RowAnalysisModule.H \
	DataSeries/SequenceModule.H \
	DataSeries/TypeIndexModule.H \
	DataSeries/commonargs.H \
	DataSeries/cryptutil.H
