#
#  (c) Copyright 2005, Hewlett-Packard Development Company, LP
#
#  See the file named COPYING for license details
#
# automake input file

# TODO transition all the source files to .cpp, includes to .hpp so we
# might be able to build on windows.

nobase_include_HEADERS = \
	DataSeries/DataSeriesFile.H \
	DataSeries/DSExpr.hpp \
	DataSeries/DStoTextModule.H \
	DataSeries/Extent.H \
	DataSeries/ExtentField.H \
	DataSeries/ExtentSeries.H \
	DataSeries/ExtentType.H \
	DataSeries/Field.hpp \
	DataSeries/FixedField.hpp
	DataSeries/GeneralField.H \
	DataSeries/GroupByModule.H \
	DataSeries/IndexSourceModule.H \
	DataSeries/Int64Field.hpp \
	DataSeries/Int64TimeField.hpp \
	DataSeries/MinMaxIndexModule.H \
	DataSeries/DataSeriesModule.H \
	DataSeries/PrefetchBufferModule.H \
	DataSeries/RowAnalysisModule.H \
	DataSeries/SequenceModule.H \
	DataSeries/TypeIndexModule.H \
	DataSeries/commonargs.H \
	DataSeries/cryptutil.H
